2011-05-09  Miloslav Trmač  <mitr@redhat.com>

	* src/server_add_admin.py (main): Beautify.

	* src/client.py (read_password): Move ...
	* src/utils.py (read_password): ... here.  All users updated.
	(optparse_add_batch_option): New function, extracted from
	client.py_handle_global_options.
	(get_daemon_options): New parameter batch.
	* src/client.py (handle_global_options): Use
	utils.optparse_add_batch_option().
	* src/server_add_admin.py (AddAdminConfiguration): New class.
	(main): Add --batch.  Use utils.read_password.  Only ask for password
	once in batch mode.

	* src/utils.py (get_daemon_options): Rename parameter daemonize to
	daemon_options.  Only handle --internal-log-dir and --internal-pid-dir
	if daemon_options is True.  All users updated.

	* config/server.conf (database-path): Fix default value.

	* src/utils.py (get_daemon_options): Add --internal-pid-dir.
	(create_pid_file, delete_pid_file): New parameter options.  All users
	updated.

	* src/bridge.py (main)
	* src/server.py (main): Remove the unused possibility to disable logging
	to a file, by editing settings.py.

	* src/utils.py (get_daemon_options): Add --internal-log-dir.
	* src/server.py (main)
	* src/bridge.py (main): Reflect --internal-log-dir, overriding
	settings.log_dir.

2011-05-06  Miloslav Trmač  <mitr@redhat.com>

	* src/server.py (request_handling_child): Log errors when opening the
	database instead of silently discarding them.

	* src/client.py (SignRPMsReplyThread._real_run): Immediately report
	successful subrequests in verbose mode.

	* src/bridge.py (bridge_one_request): Log more information on NSPRError.

2011-02-01  Miloslav Trmač  <mitr@redhat.com>

	* README: Add numerical identifiers to command sequences to disambiguate
	"see above" references.

2010-06-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Define PACKAGE_URL.

2010-05-27  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (_CombiningBuffer.__init__)