@@ -111,34 +111,43 @@ def logging_level_from_options(options):
     else: # options.verbose >= 2
         return logging.DEBUG
 
-def get_daemon_options(description, default_config_file, batch=False,
-                       daemon_options=True):
+def create_basic_parser(description, default_config_file):
+    '''Create a basic optparse parser for a bridge/server component.'''
+    parser = optparse.OptionParser(usage='%prog [options]',
+                                   version='%%prog %s' % (settings.version),
+                                   description=description)
+    optparse_add_config_file_option(parser, default_config_file)
+    optparse_add_verbosity_option(parser)
+    return parser
+
+def optparse_parse_options_only(parser):
+    '''Parse input using parser, expecting no arguments.
+
+    Return resulting options.  Exit on unexpected arguments.
+
+    '''
+    (options, args) = parser.parse_args()
+    if len(args) != 0:
+        parser.error('unexpected argument')
+    return options
+
+def get_daemon_options(description, default_config_file):
     '''Handle command-line options for a daemon.
 
     Return the options object.  Use daemon options if daemon_options.  Use
     --batch if batch.  Exit on error.
 
     '''
-    parser = optparse.OptionParser(usage='%prog [options]',
-                                   version='%%prog %s' % (settings.version),
-                                   description=description)
-    optparse_add_config_file_option(parser, default_config_file)
-    optparse_add_verbosity_option(parser)
-    if batch:
-        optparse_add_batch_option(parser)
-    if daemon_options:
-        parser.add_option('--internal-log-dir', help=optparse.SUPPRESS_HELP,
-                          dest='log_dir')
-        parser.add_option('--internal-pid-dir', help=optparse.SUPPRESS_HELP,
-                          dest='pid_dir')
-        parser.add_option('-d', '--daemonize', action='store_true',
-                          help='Run in the background')
-        parser.set_defaults(log_dir=settings.log_dir, pid_dir=settings.pid_dir,
-                            daemonize=False)
-    (options, args) = parser.parse_args()
-    if len(args) != 0:
-        parser.error('unexpected argument')
-    return options
+    parser = create_basic_parser(description, default_config_file)
+    parser.add_option('--internal-log-dir', help=optparse.SUPPRESS_HELP,
+                      dest='log_dir')
+    parser.add_option('--internal-pid-dir', help=optparse.SUPPRESS_HELP,
+                      dest='pid_dir')
+    parser.add_option('-d', '--daemonize', action='store_true',
+                      help='Run in the background')
+    parser.set_defaults(log_dir=settings.log_dir, pid_dir=settings.pid_dir,
+                        daemonize=False)
+    return optparse_parse_options_only(parser)
 
  # Koji utilities
 
